# GeoFence

./: .gitignore  README.md  package-lock.json
backend/: README.md  database.db  database_v2.db  pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/app/api/: routes_alerts.py  routes_objects.py  routes_telemetry.py  routes_zones.py
backend/src/app/db/: models.py  session.py
backend/src/app/services/: ingestion.py  zone_eval.py
backend/src/app/tests/: test_zone_eval.py  verify_manual.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: index.css
frontend/src/app/: App.tsx  utils.ts
frontend/src/app/api/: client.ts  types.ts
frontend/src/app/components/: AlertsPanel.css  AlertsPanel.tsx  MapView.css  MapView.tsx  Overlay.css  Overlay.tsx  Sidebar.css  Sidebar.tsx
planning/: MVP.md  day1.md  day2.md  day3.md  repo-skeleton.md
schemas/: alert_event.schema.json  alerts_list_response.schema.json  api_error.schema.json  api_ok.schema.json  object_summary.schema.json  objects_list_response.schema.json  telemetry_batch_request.schema.json  telemetry_list_response.schema.json  telemetry_point.schema.json  zone.schema.json  zones_list_response.schema.json
tools/telemetry_generator/: README.md  generator.py
