[project]
name = "geofence-backend"
version = "0.1.0"
description = "FastAPI backend for Arctic Corridor Geofence Tracker"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.8",
    "shapely>=2.0.0",  # For geospatial operations
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
